# perfcheck

./: .gitignore  AGENTS.md  Justfile  README.md
docs/: integrations.md  performance-by-default.md
docs/research/: performance-by-default-full.md
go/: .golangci.yml  go.mod
go/cmd/perfcheck-go/: main.go
go/cmd/perfcheck-golangci/: main.go
go/internal/analyzer/: analyzers.go  atomic_small_lock.go  atomic_small_lock_test.go  bound_concurrency.go  bound_concurrency_test.go  buffered_io.go  buffered_io_test.go  defer_in_loop.go  defer_in_loop_test.go  diagnostics.go  equal_fold.go  equal_fold_test.go  fixtures_test.go  linked_list.go  linked_list_test.go  preallocate_collections.go  preallocate_collections_test.go  reflection_dynamic.go  reflection_dynamic_test.go  regex_compile.go  regex_compile_test.go  rune_conversion.go  rune_conversion_test.go  stack_alloc.go  stack_alloc_test.go  string_concat.go  string_concat_test.go  syncpool_pointers.go  syncpool_pointers_test.go  writer_prefer_bytes.go  writer_prefer_bytes_test.go
go/internal/ruleset/: registry.go  registry_test.go
go/pkg/perfchecklint/: analyzers.go  atomic_small_lock.go  atomic_small_lock_test.go  bound_concurrency.go  bound_concurrency_test.go  buffered_io.go  buffered_io_test.go  bundle.go  bundle_test.go  doc.go  (+26 more)
openspec/: project.md
perfcheck-core/config/: default_rules.tsv
perfcheck-core/doc/: README.md
perfcheck-core/schema/: rule_schema.json
rust/: Cargo.toml  clippy.toml  deny.toml  rustfmt.toml  taplo.toml
rust/fixtures/: violations.rs
rust/src/: lib.rs  linter.rs  rules.rs
(+49 files in other folders)
